--- a/ABOUT ME.html
+++ b/ABOUT ME.html
@@ -9,7 +9,7 @@
         <br>My hobbies are reading books and playing cricket .
         <br>I wake up early in the morning .
         <br>I can do html programming & web devlopment and still learning more .
-        <br>You can contact me through my <A href="mailto:cvedang08@protonmail.com">Email Account</A> OR through my forkgram account ph.no. 7980948004
+        <br>You can contact me through my <A href="mailto:cvedang08@protonmail.com">Email Account</A>
 </font></center>
 </body>    
 </html>
